--- a/tests/functional/rbac/test_business_permissions_data/jobs/provider/config.yaml
+++ b/tests/functional/rbac/test_business_permissions_data/jobs/provider/config.yaml
@@ -10,29 +10,39 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- type: cluster
-  name: cluster_with_host_action
-  version: 3
+- type: provider
+  version: 6.5
+  name: test_provider
 
-  actions:
-    just_action:
+  actions: &actions
+    regular_action:
       type: job
       script_type: ansible
       script: ./actions.yaml
-      display_name: "Just action"
+      display_name: "Regular action"
       states:
         available: any
 
-    host_action:
-      type: job
-      script_type: ansible
-      script: ./actions.yaml
-      display_name: "Host action"
+    multijob:
+      type: task
+      display_name: "Multijob"
+      scripts:
+        - &multijob
+          name: first_step
+          script_type: ansible
+          script: ./actions.yaml
+          params:
+            ansible_tags: success
+        - <<: *multijob
+          name: second_step
+        - <<: *multijob
+          name: third_step
       states:
-        available:
-          - created
-        on_success: initialized
-        on_fail: bad_state_very_bad
-      host_action: true
+        available: any
 
 
+- type: host
+  version: 2.54
+  name: test_host
+
+  actions: *actions
