Fixed Add service role and added check permission

--- a/python/rbac/upgrade/role_spec.yaml
+++ b/python/rbac/upgrade/role_spec.yaml
@@ -694,6 +694,7 @@ roles:
       child:
         - Create service
         - Add service hidden
+        - Get service object
 
     - name: Remove service hidden
       description: The ability to remove service from cluster
