ADCM-2706 Fixed actions list, fixed Create Cluster and Create Provider roles, fixed clean tables after remove policy

--- a/python/rbac/upgrade/role_spec.yaml
+++ b/python/rbac/upgrade/role_spec.yaml
@@ -71,6 +71,7 @@ roles:
           models:
             - name: hostprovider
               codenames:
+                - view
                 - add
 
     - name: Create cluster
@@ -84,6 +85,7 @@ roles:
           models:
             - name: cluster
               codenames:
+                - view
                 - add
 
     - name: Accept license
