ADCM-2657 add UI tests for policies

--- a/tests/ui_tests/test_admin_page_data/cluster_with_services/config.yaml
+++ b/tests/ui_tests/test_admin_page_data/cluster_with_services/config.yaml
@@ -14,6 +14,25 @@
   name: test_cluster
   version: 1.5
   edition: community
+  config: &config
+    str_param:
+      type: string
+      required: false
+      default: '123'
+      description: must be changed to bar()
+    int:
+      type: integer
+      required: false
+      default: 2
+      description: must be changed to 5
+    core-site:
+      param1:
+          type: string
+          required: false
+      param2:
+          type: integer
+          required: false
+
 
 - type: service
   name: test_service_1
@@ -27,15 +46,17 @@
           type: string
           required: false
           default: '123'
+  config: *config
 
 - type: service
   name: test_service_2
   description: Test service 2
   version: '1.2'
   components:
-    first:
+    second:
       config:
         str_param:
           type: string
           required: false
           default: '123'
+  config: *config
