--- a/tests/functional/test_upgrade_actions_data/upgrade_failures/before_switch/config.yaml
+++ b/tests/functional/test_upgrade_actions_data/upgrade_failures/before_switch/config.yaml
@@ -34,3 +34,28 @@
       states:
         available: any
         on_success: ready_to_upgrade
+
+  config: &config
+    - name: somestring
+      type: string
+    - name: someint
+      type: integer
+      default: 12
+    - name: somethingelse
+      type: map
+    - name: moar
+      type: list
+      default:
+        - high
+        - noon
+
+- type: service
+  version: 2.3
+  name: test_service
+
+  config: *config
+
+  components:
+    test_component:
+      config: *config
+
