ADCM-2717 Test on fail with on_fail and on_success

--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,5 +1,5 @@
 --extra-index-url https://ci.arenadata.io/artifactory/api/pypi/python-packages/simple
-adcm_client>=2022.3.16.11
+adcm_client==2022.3.30.9rc112
 adcm-pytest-plugin>=4.15.2, < 5.0
 attr
 allure-pytest
