--- a/tests/functional/test_upgrade_actions_data/upgrade_failures/old/config.yaml
+++ b/tests/functional/test_upgrade_actions_data/upgrade_failures/old/config.yaml
@@ -17,6 +17,7 @@
   config: &config
     - name: somestring
       type: string
+      required: false
     - name: someint
       type: integer
       default: 12
