--- a/tests/functional/test_upgrade_actions_data/upgrade_failures/after_switch_with_on_fail/config.yaml
+++ b/tests/functional/test_upgrade_actions_data/upgrade_failures/after_switch_with_on_fail/config.yaml
@@ -38,11 +38,13 @@
   config: &config
     - name: somestring
       type: string
+      required: false
     - name: someint
       type: integer
       default: 12
     - name: somethingelse
       type: map
+      required: false
     - name: moar
       type: list
       default:
