--- a/tests/functional/test_upgrade_actions_data/upgrade_failures/after_switch_with_on_fail/restore.yaml
+++ b/tests/functional/test_upgrade_actions_data/upgrade_failures/after_switch_with_on_fail/restore.yaml
@@ -11,7 +11,7 @@
 # limitations under the License.
 
 - name: Restore upgrade
-  hosts: all
+  hosts: localhost
   connection: local
   gather_facts: no
 
