--- a/tests/functional/test_upgrade_actions_data/upgrade_failures/before_switch/fail.yaml
+++ b/tests/functional/test_upgrade_actions_data/upgrade_failures/before_switch/fail.yaml
@@ -11,7 +11,7 @@
 # limitations under the License.
 
 - name: Fail action
-  hosts: all
+  hosts: localhost
   connection: local
   gather_facts: no
 
