--- a/conf/adcm/config.yaml
+++ b/conf/adcm/config.yaml
@@ -2,7 +2,7 @@
 
   type: adcm
   name: ADCM
-  version: 1.3
+  version: 1.4
 
   config:
     - name: "global"
@@ -59,6 +59,8 @@
           description: |
             Mitogen for Ansible is a completely redesigned UNIX connection layer and module runtime for Ansible.
           type: boolean
+          ui_options:
+            invisible: true
           default: false
         - name: "forks"
           display_name: "Forks"
