ADCM-2720 add tests for upgrade actions

--- a/tests/functional/test_upgrade_actions_data/upgrade_failures/before_switch/config.yaml
+++ b/tests/functional/test_upgrade_actions_data/upgrade_failures/before_switch/config.yaml
@@ -34,6 +34,13 @@
       states:
         available: any
         on_success: ready_to_upgrade
+  actions:
+    dummy_action:
+      script: dummy.yaml
+      script_type: ansible
+      type: job
+      states:
+        available: any
 
   config: &config
     - name: somestring
