--- a/tests/functional/test_upgrade_actions_data/upgrade_success/after_switch/config.yaml
+++ b/tests/functional/test_upgrade_actions_data/upgrade_success/after_switch/config.yaml
@@ -11,15 +11,27 @@
 # limitations under the License.
 
 - type: cluster
-  version: 1.2
+  version: 2.0
   name: test_cluster
-  actions:
-    dummy_action:
-      script: dummy.yaml
-      script_type: ansible
-      type: job
+
+  upgrade:
+    - name: success_bundle
+      versions:
+        min: 0.1
+        max: 1.3
+      scripts:
+        - &action
+          name: first_action
+          script: ./succeed.yaml
+          script_type: ansible
+        - name: switch action
+          script: bundle_switch
+          script_type: internal
+        - <<: *action
+          name: first action after switch
       states:
         available: any
+        on_success: ready_to_upgrade
 
   config: &config
     - name: somestring
@@ -28,7 +40,29 @@
     - name: someint
       type: integer
       default: 12
+    - name: somethingelse
+      type: map
+      required: false
+    - name: moar
+      type: list
+      default:
+        - high
+        - noon
 
+  actions:
+    restore:
+      type: job
+      script: ./restore.yaml
+      script_type: ansible
+      states:
+        available: any
+        on_success: upgraded
+    dummy_action:
+      script: dummy.yaml
+      script_type: ansible
+      type: job
+      states:
+        available: any
 
 - type: service
   version: 2.3
