--- a/tests/functional/test_upgrade_actions_data/upgrade_failures/before_switch/config.yaml
+++ b/tests/functional/test_upgrade_actions_data/upgrade_failures/before_switch/config.yaml
@@ -34,7 +34,15 @@
       states:
         available: any
         on_success: ready_to_upgrade
+
   actions:
+    restore:
+      type: job
+      script: ./restore.yaml
+      script_type: ansible
+      states:
+        available: any
+        on_success: upgraded
     dummy_action:
       script: dummy.yaml
       script_type: ansible
